@@ -1,0 +1,30 @@
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/methods-Chromatogram.R,
+%   R/methods-Chromatograms.R
+\name{normalize-Chromatogram}
+\alias{normalize-Chromatogram}
+\alias{normalize,Chromatogram-method}
+\alias{normalize,Chromatograms-method}
+\title{Normalize chromatographic data}
+\usage{
+\S4method{normalize}{Chromatogram}(object, method = c("max", "sum"))
+
+\S4method{normalize}{Chromatograms}(object, method = c("max", "sum"))
+}
+\arguments{
+\item{object}{\code{\link[=Chromatogram]{Chromatogram()}} or \code{\link[=Chromatograms]{Chromatograms()}} object.}
+
+\item{method}{\code{character(1)} defining whether each chromatogram should be
+normalized to its maximum signal or total signal.}
+}
+\value{
+the normalized input object.
+}
+\description{
+\code{normalize} \emph{normalizes} the intensities of a chromatogram by dividing them
+either by the maximum intensity (\code{method = "max"}) or total intensity
+(\code{method = "sum"}) of the chromatogram.
+}
+\author{
+Johannes Rainer
+}
