@@ -205,3 +205,22 @@ test_that("filterChromatogramsKeepTop,Chromatograms works", {
     res <- filterColumnsKeepTop(chrs, n = 1, aggregationFun = mean)
     expect_equal(res, chrs[, 3])
 })
+
+test_that("normalize,Chromatograms works", {
+    chr1 <- Chromatogram(rtime = 1:10 + rnorm(n = 10, sd = 0.3),
+                         intensity = c(5, 29, 50, NA, 100, 12, 3, 4, 1, 3))
+    chr2 <- Chromatogram(rtime = 1:10 + rnorm(n = 10, sd = 0.3),
+                         intensity = c(80, 50, 20, 10, 9, 4, 3, 4, 1, 3))
+    chr3 <- Chromatogram(rtime = 3:9 + rnorm(7, sd = 0.3),
+                         intensity = c(53, 80, 130, 15, 5, 3, 2))
+    chr4 <- Chromatogram(rtime = 1:10,
+                         intensity = c(NA, NA, 4, NA, NA, 9, NA, 10, 9, 1))
+    chrs <- Chromatograms(list(chr1, chr2, chr3, chr4), ncol = 2)
+    res <- normalize(chrs)
+
+    expect_true(ncol(res) == ncol(chrs))
+    expect_true(nrow(res) == nrow(chrs))
+
+    expect_equal(intensity(res[1, 2]) * max(intensity(chrs[1, 2]), na.rm = TRUE),
+                 intensity(chrs[1, 2]))
+})
